# affinidi-tdk

./: .all-contributorsrc  .commitlintrc.json  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .gitleaks.toml  .gitleaksignore  .npmignore  .npmrc  .nxreleaserc.json  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  NOTICE.txt  README.md  SECURITY.md  nx.json  package-lock.json  package.json  pom.xml  project.json  pubspec.yaml  tsconfig.base.json
clients/python/affinidi_tdk_client_aca/: README.md  pyproject.toml  setup.py
clients/python/affinidi_tdk_client_aca/affinidi_tdk_client_aca/: exceptions.py  rest.py
clients/python/affinidi_tdk_client_aca/docs/: ServiceErrorResponse.md
clients/python/affinidi_tdk_client_aca/test/: test_data_request.py  test_service_error_response_details_inner.py
clients/python/affinidi_tdk_client_dcf/: .travis.yml  README.md  pyproject.toml  setup.py
clients/python/affinidi_tdk_client_dcf/.openapi-generator/: FILES
clients/python/affinidi_tdk_client_dcf/affinidi_tdk_client_dcf/: __init__.py  exceptions.py
clients/python/affinidi_tdk_client_dcf/docs/: ActiveConnectionsDto.md  AuthConfigInfoPatchDtoRefreshTokenTemplateOperationsInnerFunctions.md  CallbackResponseOneOf.md  ConfigTemplateDto.md  ConfigTemplateDtoInner.md  ConnectionCreationResponse.md  DataSource.md  DataSourceConfigPatchRequest.md  DataSourcePatchRequest.md  DataSourcePatchStatusRequest.md  DataSourceResponse.md  DataSourceValidationResultValidationResult.md  EndpointConfigDto.md  EndpointConfigPatchRequestOperationsInner.md  InvalidParameterError.md  MappingsResponse.md  PatchDataSourceConfigStatusResponse.md  TransformationTemplateDto.md  TransformationTemplateDtoSchemaMapping.md
clients/python/affinidi_tdk_client_dcf/test/: test_auth_config.py  test_auth_config_info_dto_exchange_token_template_operations_inner.py  test_auth_config_info_dto_refresh_token_template_operations_inner.py  test_auth_config_info_patch_dto_exchange_token_template_operations_inner.py  test_auth_config_info_patch_dto_exchange_token_template_operations_inner_functions.py  test_auth_config_info_patch_dto_refresh_token_template.py  test_available_connectors_response.py  test_basic_connector_dto.py  test_callback_response_one_of.py  test_config_template_dto_inner.py  test_connection_creation_request.py  test_connector_dto.py  test_connectors_by_id_response.py  test_data_source_config_by_id_response.py  test_data_source_config_by_id_response_one_of.py  test_data_source_config_patch_request.py  test_data_source_config_patch_status_request.py  test_data_source_config_response.py  test_data_source_config_validation_result_validation_result.py  test_data_source_patch_status_request.py  test_data_source_validation_result_validation_result.py  test_endpoint_config_dto.py  test_endpoint_config_patch_request_operations_inner.py  test_item_already_exists_error.py  test_mappings_response.py  test_not_found_error.py  test_unauthorized_error.py  (+2 more)
clients/python/iam_client/: .gitlab-ci.yml  .travis.yml  README.md  project.json  pyproject.toml  setup.py  tox.ini
clients/python/wallets_client/: .gitlab-ci.yml  .travis.yml  README.md  project.json  pyproject.toml  setup.py  tox.ini
(+10635 files in other folders)
