[tool.poetry]
name = "affinidi_tdk_wallets_client"
version = "1.0.0"
description = "CloudWalletEssentials"
authors = ["Affinidi <info@affinidi.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/affinidi.com/affinidi-tdk"
keywords = ["OpenAPI", "OpenAPI-Generator", "CloudWalletEssentials"]
include = ["affinidi_tdk_wallets_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
